plugins {
    id 'java'
    id 'application'
    id 'maven-publish'
}
archivesBaseName = 'Xinyuiii'
group = 'Xinyuiii'
version '1.0-SNAPSHOT'
java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}
repositories {
    mavenCentral()
    maven {
        url "https://maven.seedfinding.com"
    }
    maven {
        url "https://maven.latticg.com/"
    }
    maven {
        url "https://www.jitpack.io"
    }
}
application {
    mainClass = "Xinyuiii.properties.Main"
}
dependencies {
    implementation('com.seedfinding:mc_feature:1.171.7')
    implementation('com.seedfinding:mc_math:1.171.0')
    implementation('com.seedfinding:mc_noise:1.171.1')
    implementation('com.seedfinding:mc_reversal:1.171.1')
    implementation('com.seedfinding:mc_terrain:1.171.1')
    implementation('com.seedfinding:mc_seed:1.171.2')
    implementation('com.seedfinding:mc_core:1.200.0')
    implementation('com.seedfinding:mc_biome:1.171.1')
    implementation 'com.seedfinding:latticg:1.06@jar'
    implementation 'junit:junit:4.13.1'
}
test {
    useJUnitPlatform()
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}
